# PrismaStream

./: CMakeLists.txt  README.md  main.cpp
include/: Device.hpp  Init.hpp  Metadata.hpp  pa_init.hpp  stream.hpp
include/Core/: Device.hpp  Stream.hpp
src/: Device.cpp  Init.cpp  Stream.cpp  main.cpp  pa_init.cpp  stream.cpp
src/Core/: Device.cpp  Init.cpp  Stream.cpp
